fix(subnav): Fix subnav items arrow spacing (#231)

--- a/src/components/structural/header/header-submenu/header-submenu.module.css
+++ b/src/components/structural/header/header-submenu/header-submenu.module.css
@@ -215,7 +215,7 @@
 .placeHolder {
   flex-shrink: 0;
   margin-left: -1px;
-  width: 17px;
+  width: 16px;
 }
 
 .itemChecked {
@@ -321,10 +321,10 @@
 }
 
 .emptySpace {
-  padding-left: 20px;
+  padding-left: 16px;
 
   @media (--bp-lg) {
-    padding-left: 20%;
+    padding-left: 16px;
   }
 }
 
